--- a/app/src/main/res/layout/activity_home_pendamping.xml
+++ b/app/src/main/res/layout/activity_home_pendamping.xml
@@ -28,7 +28,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="50dp"
-            android:layout_toRightOf="@+id/foto_profil"
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="normal" />
@@ -138,11 +137,11 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_marginTop="20dp"
             android:id="@+id/l1"
-            android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="105dp"
+            android:gravity="center">
 
             <ImageView
 
@@ -150,30 +149,71 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/icon4" />
+
             <ImageView
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
                 android:id="@+id/imgProfile"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:src="@drawable/icon7" />
+
             <ImageView
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
                 android:id="@+id/imgPengajuan"
                 android:layout_width="95dp"
                 android:layout_height="95dp"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground"
                 android:src="@drawable/pengajuan" />
 
         </LinearLayout>
+
         <LinearLayout
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_below="@id/l1"
             android:gravity="center"
-            android:layout_marginHorizontal="16dp"
+            android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:clickable="true"
+                android:id="@+id/chartuniv"
+                android:foreground="?attr/selectableItemBackground"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/icon4" />
+            <ImageView
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground"
+                android:id="@+id/chartjk"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/icon7" />
+
+            <ImageView
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground"
+                android:id="@+id/chartprodi"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/pengajuan" />
+            <ImageView
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground"
+                android:id="@+id/chartdaily"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/pengajuan" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="384dp"
+            android:layout_height="198dp"
+            android:layout_below="@id/l1"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="128dp"
+            android:gravity="center">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_mhs"
