--- a/app/src/main/res/layout/activity_detail_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_detail_mahasiswa.xml
@@ -20,11 +20,13 @@
         android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
             android:id="@+id/img"
-            android:src="@drawable/logo2" />
+            android:layout_gravity="center"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp" />
 
         <View
             android:layout_width="match_parent"
