--- a/app/src/main/res/layout/activity_home_pendamping.xml
+++ b/app/src/main/res/layout/activity_home_pendamping.xml
@@ -19,7 +19,7 @@
             android:layout_marginLeft="100dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="100dp"
-            android:src="@drawable/logo2"
+            android:src="@drawable/logo"
             android:textSize="25sp" />
 
         <TextView
