--- a/app/src/main/res/layout/activity_login_pendamping.xml
+++ b/app/src/main/res/layout/activity_login_pendamping.xml
@@ -16,7 +16,7 @@
         android:layout_marginLeft="100dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="200dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/logo2"
         android:textSize="25sp" />
 
 
