--- a/app/src/main/res/layout/activity_daftar_pendamping.xml
+++ b/app/src/main/res/layout/activity_daftar_pendamping.xml
@@ -20,7 +20,7 @@
             android:layout_marginLeft="100dp"
             android:layout_marginTop="30dp"
             android:layout_marginRight="100dp"
-            android:src="@drawable/logo"
+            android:src="@drawable/logo2"
             android:textSize="25sp" />
 
         <ImageView
