--- a/app/src/main/res/layout/activity_detail_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_detail_mahasiswa.xml
@@ -26,7 +26,8 @@
             android:layout_height="70dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:src="@drawable/logo2"/>
 
         <View
             android:layout_width="match_parent"
