--- a/app/src/main/res/layout/activity_editprofil.xml
+++ b/app/src/main/res/layout/activity_editprofil.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".Activity.EditprofilActivity"
     android:orientation="vertical"
     android:background="#655B50">
 
@@ -15,7 +16,7 @@
         <ImageView
             android:id="@+id/judul"
             android:layout_width="311dp"
-            android:layout_height="66dp"
+            android:layout_height="86dp"
             android:layout_marginLeft="100dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="100dp"
@@ -76,6 +77,17 @@
                 android:background="@android:color/white"
                 android:hint="No Handphone"
                 android:inputType="phone"
+                android:paddingLeft="20dp"
+                android:textColorHint="@color/design_default_color_on_secondary"
+                android:textSize="15sp" />
+
+            <EditText
+                android:id="@+id/namapengguna"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="15dp"
+                android:background="@android:color/white"
+                android:hint="Nama Pengguna"
                 android:paddingLeft="20dp"
                 android:textColorHint="@color/design_default_color_on_secondary"
                 android:textSize="15sp" />
