--- a/app/src/main/res/layout/activity_editprofil.xml
+++ b/app/src/main/res/layout/activity_editprofil.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.EditprofilActivity"
+    tools:context=".Activity.EditProfilActivity"
     android:orientation="vertical"
     android:background="#655B50">
 
@@ -84,7 +84,7 @@
                 android:drawableLeft="@drawable/ic_baseline_call_black_24"/>
 
             <EditText
-                android:id="@+id/namapengguna"
+                android:id="@+id/nama_pengguna"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
