--- a/app/src/main/res/layout/activity_editprofil.xml
+++ b/app/src/main/res/layout/activity_editprofil.xml
@@ -68,7 +68,7 @@
                 android:paddingLeft="20dp"
                 android:textColorHint="@color/design_default_color_on_secondary"
                 android:textSize="15sp"
-                android:drawableLeft="@drawable/ic_baseline_person_black_24"/>
+                android:drawableLeft="@drawable/ic_person_black_24dp"/>
 
             <EditText
                 android:id="@+id/no_hp"
@@ -81,7 +81,7 @@
                 android:paddingLeft="20dp"
                 android:textColorHint="@color/design_default_color_on_secondary"
                 android:textSize="15sp"
-                android:drawableLeft="@drawable/ic_baseline_call_black_24"/>
+                android:drawableLeft="@drawable/ic_phone_black_24dp"/>
 
             <EditText
                 android:id="@+id/nama_pengguna"
@@ -93,7 +93,7 @@
                 android:paddingLeft="20dp"
                 android:textColorHint="@color/design_default_color_on_secondary"
                 android:textSize="15sp"
-                android:drawableLeft="@drawable/ic_baseline_person_black_24"/>
+                android:drawableLeft="@drawable/ic_person_black_24dp"/>
 
             <EditText
                 android:id="@+id/password"
@@ -102,8 +102,8 @@
                 android:layout_marginTop="15dp"
                 android:background="@android:color/white"
                 android:textColorHint="@color/design_default_color_on_secondary"
-                android:drawableStart="@drawable/ic_baseline_lock_black_24"
-                android:drawableLeft="@drawable/ic_baseline_lock_black_24"
+                android:drawableStart="@drawable/ic_lock_black_24dp"
+                android:drawableLeft="@drawable/ic_lock_black_24dp"
                 android:ems="5"
                 android:hint="Kata Sandi"
                 android:inputType="textPassword"
@@ -116,8 +116,8 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
                 android:background="@android:color/white"
-                android:drawableStart="@drawable/ic_baseline_lock_black_24"
-                android:drawableLeft="@drawable/ic_baseline_lock_black_24"
+                android:drawableStart="@drawable/ic_lock_black_24dp"
+                android:drawableLeft="@drawable/ic_lock_black_24dp"
                 android:ems="5"
                 android:hint="Ulangi Kata Sandi"
                 android:inputType="textPassword"
@@ -126,7 +126,7 @@
                 android:textSize="15sp" />
 
             <Button
-                android:id="@+id/btn_daftar"
+                android:id="@+id/btn_simpan"
                 android:layout_width="110dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
