--- a/app/src/main/res/layout/activity_detail_pendamping.xml
+++ b/app/src/main/res/layout/activity_detail_pendamping.xml
@@ -48,14 +48,20 @@
                 android:fontFamily="@string/appbar_scrolling_view_behavior" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Beri Catatan" />
-
-            <EditText
                 android:id="@+id/catatan"
                 android:layout_width="match_parent"
-                android:layout_height="100dp" />
+                android:layout_height="wrap_content"
+                android:text="Berikan Penilaian Anda:"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.AppCompatRatingBar
+                android:id="@+id/penilaian"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:rating="0"
+                android:stepSize="0.5"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -100,7 +106,6 @@
                     android:text="Upload Tanda Tangan"
                     android:textColor="@android:color/holo_blue_light"
                     android:textStyle="italic" />
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -192,6 +197,7 @@
                         android:text="Pilih"
                         android:textAllCaps="false"
                         android:textColor="@android:color/white" />
+
                 </LinearLayout>
             </LinearLayout>
 
