--- a/app/src/main/res/layout/activity_editprofil.xml
+++ b/app/src/main/res/layout/activity_editprofil.xml
@@ -98,7 +98,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColorHint="#OOOOO"
+                android:textColorHint="#000"
                 app:passwordToggleEnabled="true"
                 tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="92dp"
@@ -122,7 +122,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColorHint="#OOOOO"
+                android:textColorHint="#000"
                  
                 app:passwordToggleEnabled="true"
                 tools:ignore="MissingConstraints"
